--- a/Restaurante_FE/Restaurante/src/app/prato-create/prato-create.component.html
+++ b/Restaurante_FE/Restaurante/src/app/prato-create/prato-create.component.html
@@ -1,4 +1,4 @@
-<!-- <p>prato-create works!</p>
+<p>prato-create works!</p>
 <div class="container">
     <h2>Criar Prato</h2>
     <form [formGroup]="pratoForm" (ngSubmit)="onSubmit()">
@@ -32,4 +32,4 @@
     </form>
     <div *ngIf="successMessage">{{ successMessage }}</div>
     <div *ngIf="errorMessage">{{ errorMessage }}</div>
-</div> -->
+</div>
