--- a/Restaurante_FE/Restaurante/src/app/app.component.html
+++ b/Restaurante_FE/Restaurante/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav>
-    <button class="btn" routerLink='pratos'>Pratos Management</button> &nbsp; <button class="btn" routerLink='refeicoes'>Refeições Management</button> &nbsp; <button class="btn" routerLink='clientes'>Clientes Management</button> &nbsp; <button class="btn" routerLink='encomendas'>Encomendas Management</button>
+    <button class="btn" routerLink='cozinha'>Cozinha Management</button> &nbsp; <button class="btn" routerLink='sala'>Sala Management</button> 
 </nav>
 <hr>
 <router-outlet></router-outlet>
