--- a/Restaurante_FE/Restaurante/src/app/pratos-management/pratos-management.component.html
+++ b/Restaurante_FE/Restaurante/src/app/pratos-management/pratos-management.component.html
@@ -1,3 +1,7 @@
 <h2>Pratos Management</h2>
-<button class="btn" routerLink="/cozinha/create-prato">Criar Novo Prato</button>
+<button class="btn" (click)="toggleFormulario()">Criar Novo Prato</button>
 <button class="btn" routerLink="/cozinha/pratos">Lista de Pratos</button>
+
+<div *ngIf="mostrarFormulario">
+    <app-prato-create></app-prato-create>  <!-- Aqui você chama o componente do formulário -->
+  </div>
