--- a/Restaurante_FE/Restaurante/src/app/cozinha/cozinha.component.html
+++ b/Restaurante_FE/Restaurante/src/app/cozinha/cozinha.component.html
@@ -1,2 +1,4 @@
-<button class="btn" (click)="navigateToPratosManagement()">Pratos Management</button>
-<button class="btn" routerLink="">Refeições Management</button>
+<div>
+    <button class="btn" (click)="navigateToPratosManagement()">Pratos Management</button>
+    <button class="btn" routerLink="">Refeições Management</button>
+</div>
