--- a/Restaurante_FE/Restaurante/src/app/prato-create/prato-create.component.css
+++ b/Restaurante_FE/Restaurante/src/app/prato-create/prato-create.component.css
@@ -1,17 +1,25 @@
 .prato-form {
     display: flex;
     flex-direction: column;
-    gap: 15px;
-    /* Espaçamento entre os campos */
+    gap: 20px; /* Ajuste o espaçamento entre os campos */
     width: 100%;
-    max-width: 500px;
-    /* Ajuste para a largura que deseja */
+    max-width: 400px; /* Aumentei a largura máxima para melhorar o layout */
     margin: 0 auto;
+    padding: 20px;
+    background-color: white;
+    border-radius: 8px;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
 }
 
 .prato-form label {
     font-weight: bold;
-    margin-bottom: 5px;
+    margin-bottom: 8px;
+    font-size: 1rem;
+    color: #333;
 }
 
 .prato-form input,
@@ -19,11 +27,18 @@
 .prato-form textarea,
 .prato-form button {
     width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    /* Espaçamento entre os campos */
+    padding: 12px;
+    margin-bottom: 15px; /* Ajuste para espaçamento entre os campos */
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 6px;
+    font-size: 1rem;
+    box-sizing: border-box;
+}
+
+.prato-form input,
+.prato-form select,
+.prato-form textarea {
+    font-family: 'Roboto', sans-serif;
 }
 
 .prato-form button {
@@ -31,6 +46,8 @@
     color: white;
     border: none;
     cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s;
 }
 
 .prato-form button:disabled {
@@ -38,17 +55,6 @@
     cursor: not-allowed;
 }
 
-.success-message,
-.error-message {
-    margin-top: 15px;
-    font-size: 14px;
-    font-weight: bold;
-}
-
-.success-message {
-    color: green;
-}
-
-.error-message {
-    color: red;
+.prato-form button:hover:not(:disabled) {
+    background-color: #45a0
 }
