--- a/Restaurante_FE/Restaurante/src/app/sala/sala.component.html
+++ b/Restaurante_FE/Restaurante/src/app/sala/sala.component.html
@@ -1,6 +1,6 @@
-
 <!-- Mudar os nomes dos routerLINK conforme as Funcionalidades! -->
-<button class="btn" routerLink="/sala/clientes">Clientes Management</button>
-<button class="btn" routerLink="/sala/encomendas">Encomendas Management</button> 
-<button class="btn" routerLink="/sala/pratosEncomenda">Prato Ementa Management</button> 
-
+<div>
+    <button class="btn" routerLink="/sala/clientes">Clientes Management</button>
+    <button class="btn" routerLink="/sala/encomendas">Encomendas Management</button>
+    <button class="btn" routerLink="/sala/pratosEncomenda">Prato Ementa Management</button>
+</div>
