--- a/Restaurante_FE/Restaurante/src/app/encomenda-create/encomenda-create.component.css
+++ b/Restaurante_FE/Restaurante/src/app/encomenda-create/encomenda-create.component.css
@@ -1,42 +1,64 @@
-.encomenda-create {
-    width: 100%;
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #ffffff;
-  }
-  
-  .encomenda-create h2 {
-    text-align: center;
-  }
-  
-  .encomenda-create form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .encomenda-create form label {
-    margin-bottom: 8px;
-  }
-  
-  .encomenda-create form select {
-    margin-bottom: 16px;
-    padding: 8px;
-  }
-  
-  .encomenda-create form button {
-    padding: 10px;
-    background-color: #007bff;
-    color: rgb(255, 255, 255);
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .encomenda-create form button:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-  }
-  
+.encomenda-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  /* Ajuste o espaçamento entre os campos */
+  width: 100%;
+  max-width: 400px;
+  /* Aumentei a largura máxima para melhorar o layout */
+  margin: 0 auto;
+  padding: 20px;
+  background-color: white;
+  border-radius: 8px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.encomenda-form label {
+  font-weight: bold;
+  margin-bottom: 8px;
+  font-size: 1rem;
+  color: #333;
+}
+
+.encomenda-form input,
+.encomenda-form select,
+.encomenda-form textarea,
+.encomenda-form button {
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 15px;
+  /* Ajuste para espaçamento entre os campos */
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 1rem;
+  box-sizing: border-box;
+}
+
+.encomenda-form input,
+.encomenda-form select,
+.encomenda-form textarea {
+  font-family: 'Roboto', sans-serif;
+}
+
+.encomenda-form button {
+  transition-duration: 0.4s;
+  background-color: white;
+  color: black;
+  border: 2px solid rgb(100, 0, 160);
+  cursor: pointer;
+  font-size: 1rem;
+  transition-duration: 0.4s;
+}
+
+.encomenda-form button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.encomenda-form button:hover:not(:disabled) {
+  background-color: #45a0
+}
