--- a/Restaurante_FE/Restaurante/src/app/prato-create/prato-create.component.css
+++ b/Restaurante_FE/Restaurante/src/app/prato-create/prato-create.component.css
@@ -1,9 +1,11 @@
 .prato-form {
     display: flex;
     flex-direction: column;
-    gap: 20px; /* Ajuste o espaçamento entre os campos */
+    gap: 20px;
+    /* Ajuste o espaçamento entre os campos */
     width: 100%;
-    max-width: 400px; /* Aumentei a largura máxima para melhorar o layout */
+    max-width: 400px;
+    /* Aumentei a largura máxima para melhorar o layout */
     margin: 0 auto;
     padding: 20px;
     background-color: white;
@@ -28,7 +30,8 @@
 .prato-form button {
     width: 100%;
     padding: 12px;
-    margin-bottom: 15px; /* Ajuste para espaçamento entre os campos */
+    margin-bottom: 15px;
+    /* Ajuste para espaçamento entre os campos */
     border: 1px solid #ccc;
     border-radius: 6px;
     font-size: 1rem;
@@ -42,12 +45,13 @@
 }
 
 .prato-form button {
-    background-color: #4CAF50;
-    color: white;
-    border: none;
+    transition-duration: 0.4s;
+    background-color: white;
+    color: black;
+    border: 2px solid rgb(100, 0, 160);
     cursor: pointer;
     font-size: 1rem;
-    transition: background-color 0.3s;
+    transition-duration: 0.4s;
 }
 
 .prato-form button:disabled {
