--- a/Restaurante_FE/Restaurante/src/app/cozinha/cozinha.component.html
+++ b/Restaurante_FE/Restaurante/src/app/cozinha/cozinha.component.html
@@ -1,4 +1,4 @@
 <div>
-    <button class="btn" (click)="navigateToPratosManagement()">Pratos Management</button>
-    <button class="btn" routerLink="">Refeições Management</button>
+    <button class="btn" (click)="navigateToPratosManagement()">Pratos</button>
+    <button class="btn" routerLink="">Refeições</button>
 </div>
