--- a/Restaurante_FE/Restaurante/src/app/prato-definir/prato-definir.component.css
+++ b/Restaurante_FE/Restaurante/src/app/prato-definir/prato-definir.component.css
@@ -44,7 +44,7 @@
     font-size: 1rem;
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
-    background-color: #f9f9f9;
+    background-color: white;
     /* Fundo claro */
     transition: border-color 0.3s ease;
     /* Transição suave */
