--- a/Restaurante_FE/Restaurante/src/app/pratos-management/pratos-management.component.html
+++ b/Restaurante_FE/Restaurante/src/app/pratos-management/pratos-management.component.html
@@ -1,8 +1,8 @@
 <div>
   <h2>Pratos Management</h2>
   <button class="btn" (click)="toggleFormulario()">Criar Novo Prato</button>
-  <button class="btn" (click)="toggleFormularioListar()">Alterar Estado dum Prato</button>
-  <button class="btn" (click)="toggleFormularioDefinirPrato()">Definir o Preço de um Prato</button>
+  <button class="btn" (click)="toggleFormularioListar()">Alterar Estado</button>
+  <button class="btn" (click)="toggleFormularioDefinirPrato()">Definir Preço</button>
 
   <div *ngIf="mostrarFormulario">
     <app-prato-create></app-prato-create>
