--- a/Restaurante_FE/Restaurante/src/app/sala/sala.component.html
+++ b/Restaurante_FE/Restaurante/src/app/sala/sala.component.html
@@ -1,6 +1,6 @@
 <!-- Mudar os nomes dos routerLINK conforme as Funcionalidades! -->
 <div>
-    <button class="btn" routerLink="/sala/clientes">Clientes Management</button>
-    <button class="btn" (click)="navigateToEncomendasManagement()">Encomendas Management</button>
-    <button class="btn" routerLink="/sala/pratosEncomenda">Prato Ementa Management</button>
+    <button class="btn" routerLink="/sala/clientes">Clientes</button>
+    <button class="btn" (click)="navigateToEncomendasManagement()">Encomendas</button>
+    <button class="btn" routerLink="/sala/pratosEncomenda">Prato Ementa</button>
 </div>
