--- a/Restaurante_FE/Restaurante/src/app/encomendas-management/encomendas-management.component.html
+++ b/Restaurante_FE/Restaurante/src/app/encomendas-management/encomendas-management.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h2>Encomendas Management</h2>
+    <h2>Área de Encomendas</h2>
     <button class="btn" (click)="toggleFormularioCriar()">Criar Nova Encomenda</button>
     <button class="btn" (click)="toggleFormularioListar()">Lista de Encomendas</button>
   
