--- a/Restaurante_FE/Restaurante/src/app/carregar-cliente/carregar-cliente.component.html
+++ b/Restaurante_FE/Restaurante/src/app/carregar-cliente/carregar-cliente.component.html
@@ -1,1 +1,31 @@
-<p>carregar-cliente works!</p>
+<div class="carregar-cliente-form-container">
+    <h2>Definir Preço do Prato</h2>
+    <form class="carregar-cliente-form" (ngSubmit)="onSubmit()">
+        <h3>Procurar Cliente</h3>
+
+        <!-- Caixa de input para o utilizador inserir o ID do cliente -->
+        <label for="clienteNif">ID do Cliente:</label>
+        <input 
+        id="clienteNif"
+        type="string" 
+        [(ngModel)]="selectedclienteNif" 
+        name="clienteNif" required
+        placeholder="Insira o nif do cliente" />
+
+        <!-- Campo para introduzir o preço -->
+        <div class="form-group">
+            <label for="valor">Preço:</label>
+            <input 
+            id="valor" 
+            type="number" 
+            [(ngModel)]="valor" 
+            name="valor" 
+            required placeholder="Insira o valor" />
+        </div>
+
+        <!-- Botão de submissão -->
+        <button type="submit" [disabled]="!selectedclienteNif || valor === undefined || valor === null || selectedclienteNif === ''">        
+            Carregar conta cliente
+        </button>
+    </form>
+</div>
