Consultar Dados Cliente

--- a/Restaurante_FE/Restaurante/src/app/clientes-management/clientes-management.component.html
+++ b/Restaurante_FE/Restaurante/src/app/clientes-management/clientes-management.component.html
@@ -6,4 +6,9 @@
     <app-carregar-cliente></app-carregar-cliente>
   </div>
 
+  <button class="btn" (click)="toggleFormularioPerfil()">Consultar Dados do Cliente</button>
+
+  <div *ngIf="mostrarFormularioPerfil">
+    <app-perfil-cliente></app-perfil-cliente>
+  </div>
 </div>
