--- a/Restaurante_FE/Restaurante/src/app/pratos-management/pratos-management.component.html
+++ b/Restaurante_FE/Restaurante/src/app/pratos-management/pratos-management.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h2>Pratos Management</h2>
+  <h2>Área de Pratos</h2>
   <button class="btn" (click)="toggleFormulario()">Criar Novo Prato</button>
   <button class="btn" (click)="toggleFormularioListar()">Alterar Estado</button>
   <button class="btn" (click)="toggleFormularioDefinirPrato()">Definir Preço</button>
