--- a/Restaurante_FE/Restaurante/src/app/carregar-cliente/carregar-cliente.component.css
+++ b/Restaurante_FE/Restaurante/src/app/carregar-cliente/carregar-cliente.component.css
@@ -103,3 +103,14 @@
     color: #333;
     margin-bottom: 20px;
 }
+.error-message {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #f8d7da;
+    color: #721c24;
+    border-radius: 8px;
+    border: 1px solid #f5c6cb;
+    font-size: 1rem;
+    text-align: center;
+  }
+  
