--- a/Restaurante_FE/Restaurante/src/app/carregar-cliente/carregar-cliente.component.html
+++ b/Restaurante_FE/Restaurante/src/app/carregar-cliente/carregar-cliente.component.html
@@ -1,31 +1,24 @@
 <div class="carregar-cliente-form-container">
-    <h2>Definir Preço do Prato</h2>
+    <h2>Carregar conta cliente</h2>
     <form class="carregar-cliente-form" (ngSubmit)="onSubmit()">
-        <h3>Procurar Cliente</h3>
-
         <!-- Caixa de input para o utilizador inserir o ID do cliente -->
-        <label for="clienteNif">NIF do Cliente:</label>
-        <input 
-        id="nif"
-        type="string" 
-        [(ngModel)]="selectedNif" 
-        name="nif" required
-        placeholder="Insira o nif do cliente" />
+        <label for="clienteNif">Introduza o nif associado ao Cliente:</label>
+        <input id="nif" type="string" [(ngModel)]="selectedNif" name="nif" required
+            placeholder="Insira o nif do cliente" />
 
-        <!-- Campo para introduzir o preço -->
         <div class="form-group">
-            <label for="valor">Preço:</label>
-            <input 
-            id="valor" 
-            type="number" 
-            [(ngModel)]="valor" 
-            name="valor" 
-            required placeholder="Insira o valor" />
+            <label for="valor">Introduza o valor a carregar:</label>
+            <input id="valor" type="number" [(ngModel)]="valor" name="valor" required placeholder="Insira o valor" />
         </div>
 
         <!-- Botão de submissão -->
         <button type="submit" [disabled]="!selectedNif || valor === undefined || valor === null || selectedNif === ''">        
             Carregar conta cliente
         </button>
+        
+        <!-- Mensagem de erro -->
+        <div *ngIf="errorMessage" class="error-message">
+            {{ errorMessage }}
+        </div>
     </form>
 </div>
