Criação de botão ementa na sala management

--- a/Restaurante_FE/Restaurante/src/app/sala/sala.component.html
+++ b/Restaurante_FE/Restaurante/src/app/sala/sala.component.html
@@ -2,4 +2,8 @@
     <button class="btn" (click)="navigateToClientesManagement()">Clientes</button>
     
     <button class="btn" (click)="navigateToEncomendasManagement()">Encomendas</button>
+
+    <button class = "btn" (click) = "navigateToEmentaConsultar()">Ementa</button>
+
+
 </div>
